# SDCServer

./: CMakeLists.txt  README.md  SDCServer.cpp  main.cpp  node_script.js
include/: black_water_detector.hpp  camconfig.hpp  detector.hpp  event.hpp  eventsApi.hpp  events_api.hpp  flame_detection.hpp  optical_flow.hpp  process_factory.hpp  threadHandler.hpp
include/nlohmann/: json.hpp
src/: SDCServer.cpp  black_water_detector.cpp  events_api.cpp  flame_detection.cpp  optical_flow.cpp  threadHandler.cpp
