cmake_minimum_required(VERSION 2.8)
PROJECT(SDCServer)
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREAD ON)

FIND_PACKAGE(Boost 1.65.1 REQUIRED COMPONENTS system thread regex)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)


FIND_PACKAGE(Pistache REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

SET(USED_LIBS ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_REGEX_LIBRARY} pistache ${OpenCV_LIBS})


include_directories (${CMAKE_CURRENT_SOURCE_DIR}/include)


file(GLOB SOURCES "src/*.cpp")

ADD_EXECUTABLE(SDCServer ${SOURCES})
TARGET_LINK_LIBRARIES(SDCServer ${USED_LIBS})
